# unilex

./: .gitignore  AUTHORS  LICENSE-commercial.txt  LICENSE.txt  README  README.md  README.rst  TODO.rst  manage.py  nginx.site.conf  pyproject.toml  requirements.txt  tagbuild.py  unilex.service  wsgi.py
apps/: manage.py  ola.py  paging.py  profile.py  settings.py  settings_local.py.txt  urls.py  utils.py  views.py  wsgi.py
apps/content/: README  admin.py  forms.py  load.py  models.py  urls.py  views.py
apps/feedback/: admin.py  models.py  views.py
apps/tag/: SRU-SWORD-communication  admin.py  client.py  forms.py  get.py  models.py  post.py  sru.py  sword.py  tests.py  urls.py  views.py
apps/templates/: 404.html  500.html  analytics.html  base.html  debug.html  docs-nav-queries.html  docs.html  home.html  messages.html  pagination.html  profile.html  sitemap.xml
apps/vocabulary/: admin.py  baseconv.py  context_processors.py  export_csv.py  export_json.py  export_skos.py  forms.py  load_skos.py  load_xls.py  models.py  test_eurovoc.py  test_load_xls.py  test_nav_queries.py  test_navigation_queries.py  test_upload.py  tests.py  top-navigation.xls  urls.py  validation_utils.py  (+1 more)
static/: 403.html  404.html  50x.html  BingSiteAuth.xml  ads.txt  query-builder.html  tagging.crx  translit
tag/: background.html  build.py  init-tag.js  manifest.json  options.html  options.js  popup.html  style.css  tag.js
unilex/: autotranslate.py  ola.py  paging.py  profile.py  settings.py  settings_local.py.txt  translit.py  urls.py  utils.py  views.py
uploads/: keepthisfile.txt
(+307 files in other folders)
